--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-server-express": "^3.10.2",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
+    "mssql": "^9.0.1",
     "nodemon": "^2.0.19"
   }
 }
