--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "apollo-server-express": "^3.10.2",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
+    "knex": "^2.3.0",
     "mssql": "^9.0.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.20"
   }
 }
