--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "knex": "^2.3.0",
     "mssql": "^9.0.1",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3"
   }
 }
