--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.4",
     "apollo-server-express": "^3.10.2",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
     "knex": "^2.3.0",
