--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
+    "graphql-upload": "^16.0.2",
     "knex": "^2.3.0",
     "mssql": "^9.0.1",
     "nodemon": "^2.0.20"
